# hermes-subagents-overhaul-plugin

./: PLAN.md  README.md  SUBAGENT_BRIEF.md  plugin.yaml  pyproject.toml
docs/research/: acp-bridge.md  codex-app-server.md  devin-acp-client.md
hermes_subagents_overhaul/: __init__.py  binaries.py  config.py  doctor.py  manager.py  tools_schema.py  workspace.py
hermes_subagents_overhaul/backends/: __init__.py  base.py  codex_app_server.py  devin_acp.py
hermes_subagents_overhaul/contrib/: __init__.py  commands.py  hooks.py  tools.py
hermes_subagents_overhaul/sinks/: __init__.py  acp_sink.py  base.py  progress_sink.py
scripts/: install.py  setup.py  uninstall.py
tests/: conftest.py  test_acp_integration.py  test_backend_codex.py  test_backend_devin.py  test_binaries.py  test_event_mapping.py  test_foundation.py  test_integration_real.py  test_plugin_load.py  test_workspace.py  test_workspace_propagation.py
